API update
Most API endpoints added
